Fix some spacing.

--- a/src/SlotNumberInput.module.scss
+++ b/src/SlotNumberInput.module.scss
@@ -4,7 +4,7 @@
 
 .slotNumberRow {
   display: flex;
-  margin-bottom: $spacer * 1;
+  margin-bottom: 1.5rem;
 }
 
 .slotNumberContainer {
